--- a/popup.html
+++ b/popup.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>X-Tension</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <div style="width: 400px" class="container-fluid">
-            <h6 class="alert alert-danger"style="text-align: center; margin-top: 1rem"><strong>X-Tension</strong></h6>
-            <p style="text-align: center"><strong>Time to make working from home a breeze!</strong></p>
-            <form>
-                <div class="form-group">
-                    <label for="stepsPerDay">How many steps will you walk per day?</label>
-                    <input type="text" class="form-control" id="stepsPerDay">
-                </div>
-                <div class="form-group">
-                    <label for="workStartAt">What time do you start work? (0-24)</label>
-                    <input type="text" class="form-control" id="workStartAt">
-                </div>
-                <div class="form-group">
-                    <label for="workEndAt">What time do you end work? (0-24)</label>
-                    <input type="text" class="form-control" id="workEndAt">
-                </div>
-            </form>
-            <div class="row justify-content-between">
-                <div class="col-4">
-                    <button class="btn btn-primary" style="margin-bottom: 1rem">Submit</button>
-                </div>
-                <div class="col-5">
-                    <button class="btn btn-success" style="margin-bottom: 1rem">Ergonomic tips</button>
-                </div>
-            </div>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+
+<body>
+    <div style="background-image: linear-gradient(-90deg, #ef629f, #eecda3); width: 400px" class="container-fluid" >
+        <br>
+        <div>
+            <h1 style="text-align:center;">X-Tension</h1>
+            <h4 style="text-align:center"><i>Make working from home a breeze!</i></h4>
+            <br>
         </div>
-    </body>
+        <div class="form-row text-center">
+            <div class="col-12">
+                <a href="index.html"><button type="submit" class="btn btn-primary">Take me to the X-Tension app!</button></a>
+            </div>
+        </div>
+        <br>
+    </div>
+</body>
+
 </html>
