--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container-fluid" style="background-image: linear-gradient(-90deg, #ef629f, #eecda3); width: 400px">
+    <div class="container-fluid" style="background-image: linear-gradient(-90deg, #ef629f, #eecda3)">
         <div>
             <h1 style="text-align:center;">X-Tension</h1>
             <h3 style="text-align:center"><i>Make working from home a breeze!</i></h3>
